--- a/ClementPaulSpotifyApp/ClementPaulSpotifyApp.Droid/ClementPaulSpotifyApp.Droid.csproj
+++ b/ClementPaulSpotifyApp/ClementPaulSpotifyApp.Droid/ClementPaulSpotifyApp.Droid.csproj
@@ -71,8 +71,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\favicon.ico" />
-    <AndroidAsset Include="Assets\img.png" />
+    <AndroidResource Include="Resources\drawable\tabIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\img.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
