add spotify nuggets and code

--- a/ClementPaulSpotifyApp/ClementPaulSpotifyApp.iOS/ClementPaulSpotifyApp.iOS.csproj
+++ b/ClementPaulSpotifyApp/ClementPaulSpotifyApp.iOS/ClementPaulSpotifyApp.iOS.csproj
@@ -106,7 +106,10 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+    <PackageReference Include="SpotifyAPI.Web">
+      <Version>7.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClementPaulSpotifyApp\ClementPaulSpotifyApp.csproj">
