--- a/ClementPaulSpotifyApp/ClementPaulSpotifyApp/ClementPaulSpotifyApp.csproj
+++ b/ClementPaulSpotifyApp/ClementPaulSpotifyApp/ClementPaulSpotifyApp.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -16,7 +16,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+        <PackageReference Include="SpotifyAPI.Web" Version="7.0.0" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
     </ItemGroup>
 
     <ItemGroup>
