--- a/ClementPaulSpotifyApp/ClementPaulSpotifyApp/ClementPaulSpotifyApp.csproj
+++ b/ClementPaulSpotifyApp/ClementPaulSpotifyApp/ClementPaulSpotifyApp.csproj
@@ -2,11 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <DebugType>pdbonly</DebugType>
         <DebugSymbols>true</DebugSymbols>
+		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     </PropertyGroup>
 
     <ItemGroup>
