--- a/ClementPaulSpotifyApp/ClementPaulSpotifyApp.Droid/ClementPaulSpotifyApp.Droid.csproj
+++ b/ClementPaulSpotifyApp/ClementPaulSpotifyApp.Droid/ClementPaulSpotifyApp.Droid.csproj
@@ -85,4 +85,9 @@
     <AndroidResource Include="Resources\drawable\img.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionClementPaulSpotifyAppDroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
